[package]
authors = ["David Peter <mail@david-peter.de>"]
categories = ["command-line-utilities"]
description = "A command-line benchmarking tool"
homepage = "https://github.com/sharkdp/hyperfine"
license = "MIT/Apache-2.0"
name = "hyperfine"
readme = "README.md"
repository = "https://github.com/sharkdp/hyperfine"
version = "1.15.0"
rust-version = "1.60.0"
edition = "2018"
build = "build.rs"

[features]
# Use the nightly feature windows_process_extensions_main_thread_handle
windows_process_extensions_main_thread_handle = []

[dependencies]
colored = "2.0"
indicatif = "0.17.1"
statistical = "1.0"
atty = "0.2"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.26"
rand = "0.8"
shell-words = "1.0"
thiserror = "1.0"
anyhow = "1.0"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "minwindef", "winnt", "jobapi2", "tlhelp32", "handleapi"] }

[target.'cfg(all(windows, not(windows_process_extensions_main_thread_handle)))'.dependencies]
once_cell = "1.17"

[target.'cfg(target_os="linux")'.dependencies]
nix = { version = "0.25.0", features = ["zerocopy"] }

[dependencies.clap]
version = "4.0.18"
default-features = false
features = ["suggestions", "color", "wrap_help", "cargo", "help", "usage", "error-context"]

[dev-dependencies]
approx = "0.5"
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.3"

[build-dependencies]
clap = "4.0.18"
atty = "0.2"
clap_complete = "4.0.3"

[profile.release]
lto = true
