[package]
authors = ["David Peter <mail@david-peter.de>"]
categories = ["command-line-utilities"]
description = "A command-line benchmarking tool"
homepage = "https://github.com/sharkdp/hyperfine"
license = "MIT OR Apache-2.0"
name = "hyperfine"
readme = "README.md"
repository = "https://github.com/sharkdp/hyperfine"
version = "1.18.0"
edition = "2018"
build = "build.rs"
rust-version = "1.70.0"

[features]
# Use the nightly feature windows_process_extensions_main_thread_handle
windows_process_extensions_main_thread_handle = []

[dependencies]
colored = "2.0"
indicatif = "=0.17.4"
statistical = "1.0"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.31"
rand = "0.8"
shell-words = "1.0"
thiserror = "1.0"
anyhow = "1.0"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }

[target.'cfg(all(windows, not(windows_process_extensions_main_thread_handle)))'.dependencies]
once_cell = "1.17"

[target.'cfg(target_os="linux")'.dependencies]
nix = { version = "0.27.1", features = ["zerocopy"] }

[dependencies.clap]
version = "4"
default-features = false
features = ["suggestions", "color", "wrap_help", "cargo", "help", "usage", "error-context"]

[dev-dependencies]
approx = "0.5"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[build-dependencies]
clap = "4.4.10"
clap_complete = "4.2.1"

[profile.release]
lto = true
strip = true
codegen-units = 1
